# kobo-to-anki-tool-gui

./: Cargo.toml  shitpost
src/: main.rs
src/anki/: client.rs  mod.rs
src/cards/: mod.rs  preparation.rs
src/events/: mod.rs  update_event.rs
src/kobo/: database_parser.rs  find_utils.rs  mod.rs
src/layout/: app_layout.rs  fonts_setup.rs  mod.rs
