[package]
name = "kobo-to-anki-tool-gui"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.28.1"
env_logger = "0.11.5"
egui-file-dialog = "0.6.0"
disk_list = "0.2.10"
tokio = { version = "1.40.0", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json"] }
anki_bridge = { version = "0.8.0", features = ["reqwest_async"] }
anyhow = "1.0.86"
rusqlite = { version = "0.32.1", features = ["bundled"] }

[patch.crates-io]
anki_bridge = { path = "/home/usia/Documents/anki_bridge", features = ["reqwest_async"] }